add pesquisa por id (para testes)

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header>
         <h1 id="titlePage">API de Rick and Morty</h1>
         <div id="search">
-            <input id="inputSearch" type="text" placeholder="Pesquise">
-            <button><i id="icon">COLOCAR ICON AQUI</i></button>
+            <input id="inputSearch" type="number" placeholder="Pesquise">
+            <button onclick="showCharacter(event)" id="btn-go">procura ai brother</button>
         </div>
     </header>
 
     <section>
-        <div id="cards"></div>
-        <img id="logoRickAndMorty" src="./rick-and-morty-portal-shoes-white-clothing-zavvi-23.png" alt="logo rick and morty" srcset="">
+        <div id="cards">vai ser aqui</div>
+        <img src="" alt="" id="img">
     </section>
 
     <footer id="footerContent">
