add descrição cards

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
         <h1 id="titlePage">API de Rick and Morty</h1>
         <div id="search">
             <input id="inputSearch" type="number" placeholder="Pesquise">
-            <button onclick="showCharacter(event)" id="btn-go">procura ai brother</button>
+            <button onclick="search(event)" id="btn-go">procura ai brother</button>
         </div>
     </header>
 
     <section>
-        <div id="cards">vai ser aqui</div>
-        <img src="" alt="" id="img">
+        <div id="cards"></div>
     </section>
 
     <footer id="footerContent">
