add paginação funcional + limpeza de código

--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
         </form>
     </header>
 
-    <section id="random" class="mainBody"></section>
-
     <section class="mainBody">
         <div id="cards"></div>
     </section>
 
     <img src="./rick-and-morty-portal-shoes-white-clothing-zavvi-23.png" alt="" srcset="">
 
-    <button onclick="nextPage()">Proximo</button>
-    <button>Anterior</button>
+    <button id="btnNext">Proximo</button>
+    <button id="btnPrev">Anterior</button>
     <footer id="footerContent">
         
         <div id="footer">
