--- a/index.html
+++ b/index.html
@@ -52,18 +52,21 @@
 
 
 <section>
-    <div class="container">
+    <div class="container pt-4">
         <div class="row d-flex align-items-center justify-content-center" id="cards"></div>
     </div>
 </section>
 
-<div class="d-flex align-items-center justify-content-center">
+<div class="d-flex align-items-center justify-content-center containerPortal">
     <img
     class="logoRickMorty "
     src="./rick-and-morty-portal-shoes-white-clothing-zavvi-23.png"
     alt="logo rick and morty"
     />
 </div>
+
+
+
 
 <div class="btnPages d-flex justify-content-center">
     <button id="btnPrev">Anterior</button>
@@ -72,7 +75,13 @@
 </div>
 
 
+
+<!-- <div class="backpers">
+    <img src="./rick cortado.png" class="imgRickMorty" alt="">    
+    <img src="./morty cortado.png" class="imgRickMorty" alt="">
+</div> -->
 <footer id="footerContent">
+    
     <div id="footer">
         <ul>
           <li id="qtdPersonagens">PERSONAGENS:</li>
@@ -107,23 +116,6 @@
     </div>
   </div>
 
-  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
 
 
