--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <script
       src="https://kit.fontawesome.com/613312e814.js"
       crossorigin="anonymous"
@@ -28,7 +28,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >
-                <img class="iconTop" src="logo.png" alt="logo" />
+                <img class="iconTop" src="./src/images/logo.png" alt="logo" />
             </a>
         </div>
         
@@ -60,7 +60,7 @@
 <div class="d-flex align-items-center justify-content-center containerPortal">
     <img
     class="logoRickMorty "
-    src="./rick-and-morty-portal-shoes-white-clothing-zavvi-23.png"
+    src="./src/images/rick-and-morty-portal-shoes-white-clothing-zavvi-23.png"
     alt="logo rick and morty"
     />
 </div>
@@ -75,11 +75,6 @@
 </div>
 
 
-
-<!-- <div class="backpers">
-    <img src="./rick cortado.png" class="imgRickMorty" alt="">    
-    <img src="./morty cortado.png" class="imgRickMorty" alt="">
-</div> -->
 <footer id="footerContent">
     
     <div id="footer">
